--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,9 +4,10 @@
     background-attachment: fixed;
     background-size: cover;
     width: 100%;
-    height: 100%;
     text-align: justify;
     font-size: 19px;
+    min-height: 100vh; /* Страница всегда имеет необходимый размер */
+    position: relative; /* Определяет позиционирование элементов внутри */
 }
 
 .body, p, li {
@@ -27,11 +28,14 @@ body h3 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 22px;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 /*Стиль заголовка h3 теории и ссылок главной страницы*/
 
 .h1, h2 {
+    margin-top: 20px;
+    margin-bottom: 20px;
     font-family: 'Arial', Helvetica, sans-serif;
     text-align: center;
 }
@@ -44,34 +48,37 @@ body h3 {
 
 /*Размер Логотипа навигационной панели*/
 
-.flex-container_perechen {
+.flex-container-perechen {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: flex-start;
+    justify-content: center;
     width: auto;
     height: auto;
-
-
 }
 
 /*способ представления блоков и изображений страницы перечень лаб*/
 
-.flex-container_perechen > div {
+.perechen-work {
+    display: flex;
+    flex-direction: column;
+    margin: 6px;
+    height: auto;
     background-color: white;
-    width: max-content;
-    height: max-content;
-    margin: 10px;
+    width: auto;
     padding: 20px;
     font-size: 17px;
     border-radius: 50px;
     opacity: 95%;
+    align-items: center;
 
+    img {
+        width: 180px;
+        height: 180px;
+    }
 }
 
 .responsive_perechen {
-    width: auto;
-    height: auto;
+
 }
 
 /*Адаптация блоков и изображения нас странице перечень лаб*/
@@ -181,7 +188,7 @@ span {
     background-color: white;
     width: max-content;
     height: max-content;
-    margin: 30px;
+    /*margin: 30px;*/
     padding: 20px;
     font-size: 20px;
     border-radius: 50px;
@@ -214,11 +221,10 @@ span {
 /*Стили блоков и изображений страницы перечень лаб*/
 
 #footer {
-    position: static; /* Фиксированное положение */
-    left: 0;
-    bottom: 0; /* Левый нижний угол */
-    padding: 10px; /* Поля вокруг текста */
-    width: 100%; /* Ширина слоя */
+    position: static; /* Фиксируем подвал */
+    bottom: 0;  /* Всегда внизу, на виду */
+    width: 100%; /* Занимает всю ширину экрана */
+    margin-top: 30px;
     font-style: normal;
     text-align: center;
     font-family: fantasy;
